# RL-learning

./: .gitignore  README.md  pyproject.toml
runs/dpo/: events.out.tfevents.1784286682.cachyos-x8664.8452.0  events.out.tfevents.1784310502.cachyos-x8664.12316.0
runs/grpo/: events.out.tfevents.1784666284.cachyos-x8664.119621.0
runs/pretrain/: events.out.tfevents.1784224472.ek224-ROG-Zephyrus-M16-GU604VI-GU604VI.94121.0  events.out.tfevents.1784244194.cachyos-x8664.3902.0  events.out.tfevents.1784244339.cachyos-x8664.4160.0  events.out.tfevents.1784244508.cachyos-x8664.4340.0
runs/reward_model/: events.out.tfevents.1784669350.cachyos-x8664.120255.0  events.out.tfevents.1784669482.cachyos-x8664.120581.0
src/: eval.py  grpo.py  loss.py  posttrain.py  ppo.py  pretrain.py  reward_model.py  transformer.py
