[project]
name = "RL"
version = "0.1.0"
description = "A reinforcement learning project"
authors = [
    { name = "me", email = "me@example.com" },
    { name = "myself", email = "myself@example.com" },
    { name = "I", email = "i@example.com" },
]
license = { file = "LICENSE" }
requires-python = ">=3.14"

dependencies = [
    "torch",
    "tensorboard",
    "transformers",
    "datasets",
    "pandas",
    "jupyter",
    "matplotlib",
    "tqdm",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

# AMD ROCm — pip does not auto-detect the driver.
# Use this source for torch/torchvision/torchaudio so the ROCm wheel is resolved correctly.
# Install with:  pip install -e ".[rocm]"
# or:            pip install --index-url https://repo.amd.com/rocm/whl-multi-arch/ \
#                    "torch[device-all]==2.12.0+rocm7.2.4" \
#                    "torchvision[device-all]==0.27.0+rocm7.2.4" \
#                    "torchaudio==2.11.0+rocm7.2.4"
[project.optional-dependencies]
rocm = [
    "torch[device-all] @ https://repo.amd.com/rocm/whl-multi-arch/",
    "torchvision[device-all] @ https://repo.amd.com/rocm/whl-multi-arch/",
    "torchaudio @ https://repo.amd.com/rocm/whl-multi-arch/",
]

[tool.setuptools]
package-dir = {"rl" = "src"}
packages = ["rl"]