[project]
name = "RL"
version = "0.1.0"
description = "A reinforcement learning project"
authors = [
    { name = "me", email = "me@example.com" },
    { name = "myself", email = "myself@example.com" },
    { name = "I", email = "i@example.com" },
]
license = { file = "LICENSE" }
requires-python = ">=3.14"

dependencies = [
    "torch",
    "tensorboard",
    "transformers",
    "datasets",
    "pandas",
    "jupyter",
    "matplotlib",
    "tqdm",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

# AMD ROCm — pip does not auto-detect the driver.
# The AMD repo is an index, not a direct-download URL, so --index-url must be passed at install time.
# Install with:
#   pip install -e ".[rocm]" --index-url https://repo.amd.com/rocm/whl-multi-arch/
[project.optional-dependencies]
rocm = [
    "torch[device-all]==2.12.0+rocm7.2.4",
    "torchvision[device-all]==0.27.0+rocm7.2.4",
    "torchaudio==2.11.0+rocm7.2.4",
]

[tool.setuptools]
package-dir = {"rl" = "src"}
packages = ["rl"]