[project]
name = "RL"
version = "0.2.0"
description = "A reinforcement learning project"
authors = [
    { name = "me", email = "me@example.com" },
    { name = "myself", email = "myself@example.com" },
    { name = "I", email = "i@example.com" },
]
license = { file = "LICENSE" }
requires-python = ">=3.14"

# note if running on AMD GPU, install torch specifically for your setup as found here: https://pytorch.org/get-started/locally/
dependencies = [
    "torch",
    "tensorboard",
    "transformers",
    "trl",
    "datasets",
    "pandas",
    "jupyter",
    "matplotlib",
    "tqdm",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"rl" = "src"}
packages = ["rl"]